# KVPStorage

./: .gitignore  CMakeLists.txt  configure.sh  kvpstorage.secure  kvstore.secure
apps/cli/: CLI.cpp  CLI.hpp  CMakeLists.txt  main.cpp
buildroot/: kvp_defconfig
buildroot/package/kvpstorage/: CMakeLists.txt  Config.in  kvpstorage.mk
buildroot/package/kvpstorage/apps/cli/: CLI.hpp  CMakeLists.txt
buildroot/package/kvpstorage/include/kvp/commands/: CommandProcessor.hpp
buildroot/package/kvpstorage/include/kvp/storage/: FileKVStorage.hpp  IKVStorage.hpp  KVStorageFacade.hpp
buildroot/package/kvpstorage/include/kvp/utils/: KeyLoader.hpp  StoragePathResolver.hpp
buildroot/package/kvpstorage/keys/: kvpstorage.key
buildroot/package/kvpstorage/libkvp/: CMakeLists.txt
buildroot/package/kvpstorage/libkvp/storage/: KVStorageFacade.cpp
buildroot/package/kvpstorage/scripts/: init_kvpstorage.sh
buildroot/package/kvpstorage/src/: main.cpp
buildroot/package/kvpstorage/src/cli/: CLI.hpp
buildroot/package/kvpstorage/src/commands/: CommandProcessor.cpp  CommandProcessor.hpp
buildroot/package/kvpstorage/src/storage/: FileKVStorage.cpp  KVStorageFacade.hpp
buildroot/package/kvpstorage/src/utils/: KeyLoader.hpp  generate_keys.cpp
docs/: QUICK_REFERENCE-Build_And_Run_On_Linux_Desktop.txt  QUICK_REFERENCE-Build_And_Run_With_Buildroot_And_QEMU.txt
include/kvp/storage/: FileKVStorage.hpp  IKVStorage.hpp  KVStorageFacade.hpp
include/kvp/utils/: StoragePathResolver.hpp
keys/: generate_keys  kvpstorage.hmac
libkvp/: CMakeLists.txt
libkvp/commands/: CommandProcessor.cpp
libkvp/storage/: FileKVStorage.cpp
libkvp/utils/: generate_keys.cpp
scripts/: configure.sh  generate_keys  install_kvp_storage.sh
src/: CMakeLists.txt  main.cpp
src/cli/: CLI.cpp  CLI.hpp
src/commands/: CommandProcessor.cpp  CommandProcessor.hpp
src/storage/: FileKVStorage.cpp  FileKVStorage.hpp  IKVStorage.hpp  KVStorageFacade.cpp
src/utils/: KeyLoader.hpp
tst/: CMakeLists.txt  FakeStorage.hpp  test_cli.cpp  test_commands.cpp  test_kvp.cpp  test_storage.cpp
